# Simple-blockchain

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: block.rs  blockchain.rs  lib.rs
main/: Cargo.toml
main/src/: main.rs
utils/: Cargo.toml
utils/src/: coder.rs  lib.rs
