[package]
name = "core"
version = "0.1.0"
authors = ["dollarkillerx <adapawang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
utils = {path="../utils"}
serde = { version = "1.0.110", features = ["derive"] }     # 基础编码器  ()
