[package]
name = "utils"
version = "0.1.0"
authors = ["dollarkillerx <adapawang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"  # 求hash
bincode = "1.2.1"       # 二进制编码
serde = { version = "1.0.110", features = ["derive"] }     # 基础编码器  ()